--- a/public/spritetest.html
+++ b/public/spritetest.html
@@ -9,20 +9,28 @@
 
     <title>Test page for ping and console</title>
 
-    <script type="text/javascript" src="kinetic-v5.1.0.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="src/kinetic-v5.1.0.min.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
 
     <style> 
     html *
     {
        font-family: Arial;
     }
+
+    .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+        background-color: #b0e0e6;
+    }
+
     </style>
 
 </head>
 
 <body onload="initialize()">
 
-<div id='topdiv'></div>
+<div id='topdiv' class='center'></div>
 
 </body>
