--- a/public/spritetest.html
+++ b/public/spritetest.html
@@ -7,10 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=10.0, minimum-scale=1.0, user-scalable=1" />
 
-    <title>Test page for ping and console</title>
-
-    <script type="text/javascript" src="src/kinetic-v5.1.0.min.js"></script>
-    <script type="text/javascript" src="src/main.js"></script>
+    <title>Test page for sprite</title>
 
     <style> 
     html *
@@ -29,8 +26,28 @@
 
 </head>
 
-<body onload="initializeKineticStage()">
+<body>
+
+
+<img src="img/floorBoard32x48.png" alt="floor" height="48px" width="32px"
+style='position:absolute;left:0px;top:0px;'
+>
+
+<img src="img/floorBoard32x48.png" alt="floor" height="48px" width="32px"
+style='position:absolute;left:32px;top:0px;'
+>
+<img src="img/floorBoard32x48.png" alt="floor" height="48px" width="32px"
+style='position:absolute;left:64px;top:0px;'
+>
+<img src="img/floorBoard32x48.png" alt="floor" height="48px" width="32px"
+style='position:absolute;left:96px;top:0px;'
+>
 
 <div id='topdiv' class='center'></div>
 
 </body>
+
+
+
+
+
