--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,10 @@
 
 <script type="text/javascript" src="src/kinetic-v5.1.0.min.js"></script>
 <script type="text/javascript" src="src/websocket.io.js"></script>
-<script type="text/javascript" src="src/pacSetup.js"></script>
-<script type="text/javascript" src="src/main.js"></script>
+<script type="text/javascript" src="src/lq-constantsAndGlobals.js"></script>
+<script type="text/javascript" src="src/lq-kineticFunctions.js"></script>
+<script type="text/javascript" src="src/lq-packetFunctions.js"></script>
+<script type="text/javascript" src="src/lq-updaters.js"></script>
 
 
 </html>
