--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 </script>
 
 
-<script type="text/javascript" src="src/kinetic-v5.1.0.min.js"></script>
+<script type="text/javascript" src="src/konva.min.js"></script>
 <script type="text/javascript" src="src/websocket.io.js"></script>
 <script type="text/javascript" src="src/lq-constantsAndGlobals.js"></script>
 <script type="text/javascript" src="src/lq-kineticFunctions.js"></script>
